@@ -1,5 +1,10 @@
 2025-08-12  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (emacs-startup-hook): Add
+	`standard-display-unicode-special-glyphs'.
+
+2025-08-12  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/gptel-config.el (+gptel-shellcheck-fix):
 	Do not include all "web" tools.
 
